--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -43,12 +43,12 @@
 }
 
 .header_color {
-  background-color: #fefae0;
+  background-color: #fff0f3;
   color: black;
   font-style: italic;
 }
 
 .footer {
-  background-color: #fefae0;
+  background-color: #fff0f3;
 }
 
