--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -52,3 +52,11 @@
   background-color: #fff0f3;
 }
 
+.filters {
+  color: #590d22;
+  font-weight: 900;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+}
+
+
